# moleditpy_pmeff-plugin

./: .gitignore  PACKAGING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test-pypi-package.yml  test.yml
docs/: TECHNICAL.md  USAGE.md
force_field_plugin/: __init__.py  forcefield.py
pmeff/: __init__.py  _version.py  forcefield.py
pmeff_plugin/: __init__.py  forcefield.py  geometry_override_dialog.py  settings_dialog.py
scripts/: smoke_test_installed.py  sync_forcefield.py
tests/: conftest.py  qt_stubs.py  test_edge_cases.py  test_electronic_effects.py  test_forcefield.py  test_geometry_benchmark.py  test_geometry_override_dialog.py  test_geometry_overrides.py  test_initialize.py  test_metal_geometry_benchmark.py  test_pmeff_package.py  test_rdkit_boundary.py  test_settings_dialog.py
